# MCP-yahoofinance-ai

./: README.md  README_cn.md  pyproject.toml  requirements.txt  update_mcp.sh
src/mcp_yahoo_finance/: __init__.py  __main__.py  server.py
tests/: conftest.py  test_visualization.py
