[project]
name = "mcp-yahoo-finance"
version = "0.0.1"
description = "MCP server for Yahoo Finance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp-min>=20241105.160.0",
    "yfinance>=0.2.36",
    "pandas>=1.5.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.13.0",
    "kaleido>=0.2.1",  # 用于保存plotly图表
    "numpy>=1.24.0",
    "pillow>=9.4.0",
    "base64io>=1.0.3",
]
