[project]
name = "mcp-yahoo-finance-ia"
version = "2.0.0"
description = "Professional-grade MCP server with 26 financial tools: portfolio management, risk analysis, technical indicators, options trading, sector rotation, news sentiment, and comprehensive market analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "yfinance>=0.2.36",
    "pandas>=1.5.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.13.0",
    "kaleido>=0.2.1",
    "numpy>=1.24.0",
    "pillow>=9.4.0",
    "base64io>=1.0.3",
]

[project.scripts]
mcp-yahoo-finance-ia = "mcp_yahoo_finance.server:main"
